--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
-		"express-handlebars": "^8.0.1",
 		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.0",
@@ -28,7 +27,9 @@
 		"passport": "^0.7.0",
 		"passport-github2": "^0.1.12",
 		"passport-jwt": "^4.0.1",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"nodemailer": "^7.0.2",
+		"twilio": "^5.6.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.9"
