--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@faker-js/faker": "^9.7.0",
 		"bcrypt": "^5.1.1",
 		"commander": "^13.1.0",
+		"compression": "^1.8.0",
 		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
@@ -24,11 +25,11 @@
 		"mongoose": "^8.13.0",
 		"mongoose-paginate-v2": "^1.9.0",
 		"multer": "^1.4.5-lts.2",
+		"nodemailer": "^7.0.2",
 		"passport": "^0.7.0",
 		"passport-github2": "^0.1.12",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
-		"nodemailer": "^7.0.2",
 		"twilio": "^5.6.0"
 	},
 	"devDependencies": {
