--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@faker-js/faker": "^9.7.0",
 		"bcrypt": "^5.1.1",
+		"cart-utils-maxi": "^1.0.0",
 		"commander": "^13.1.0",
 		"compression": "^1.8.0",
 		"cookie-parser": "^1.4.7",
