--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"passport-github2": "^0.1.12",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
-		"twilio": "^5.6.0"
+		"twilio": "^5.6.0",
+		"winston": "^3.17.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.9"
