LOGGER - LOGGERENVIRONMENT - CONFIG - APP - SESSIONS.CONTROLLER - USERS.CONTROLLER - PRODUCTS.CONTROLLER - CARTS.CONTROLLER - ORDERS.CONTROLLER - BUSINESS.CONTROLLER
- En logger.js: se centralizaron los logger dev y prod.
- En loggerEnvironment.js: se corrigió comparación para activar entorno prod con 'prod' en vez de 'production'.
- En config.js: se agregó detección del archivo .env según entorno con envFile y se normalizó el valor de mode.
- En app.js: se comentó process.exit(0) y se envolvió startServer() con try/catch usando logger.fatal para errores críticos.
- En app.js también se agregó logger.info para confirmar inicio del servidor.
- En db.js: logger en conexión a MongoDB.
- En twilio.js: logger para envío de WhatsApp.
- En customLevels.js / devLogger.js / prodLogger.js / logger.js / loggerEnvironment.js: se configuraron niveles personalizados y colores.
- En addLogger.js: se creó la función middleware que agrega logger al objeto req y logea cada request HTTP.
- En sessions.controller.js: logger en login, register, logout, current y recuperación.
- En users.controller.js: logger en reset token, cambio de contraseña y recuperación.
- En products.controller.js: logger en get, create, update, delete.
- En carts.controller.js: logger en todas las funciones, incluida purchaseCart.
- En orders.controller.js: logger en createOrder (transacción) y getAllOrders.
- En business.controller.js: logger en creación de negocios.
- Se cambiaron los archivos de logger desde la carpeta utils hacia la carpeta config.-

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"start": "node src/app.js",
-		"dev": "nodemon src/app.js",
+		"start": "node src/app.js prod",
+		"dev": "nodemon src/app.js dev",
+		"prod": "node src/app.js prod",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
