--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"passport-github2": "^0.1.12",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1",
 		"twilio": "^5.6.0",
 		"winston": "^3.17.0"
 	},
