--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"type": "module",
 	"dependencies": {
 		"@faker-js/faker": "^9.7.0",
-		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
 		"cart-utils-maxi": "^1.0.0",
 		"commander": "^13.1.0",
 		"compression": "^1.8.0",
