REESTRUCTURACION COMPLETA DE NOMBRES DE ARCHIVOS
- Se renombraron todos los archivos y carpetas a formato kebab-case con minúsculas, según convención del profesor.
- Se reorganizó la carpeta `models` dentro de `dao/mongo/`, y se eliminaron referencias inconsistentes a mayúsculas.
- Se corrigió el error crítico que generaba loop infinito por ejecución de lógica fuera del bloque de cluster.
- Se ajustó correctamente el paso del modo (`dev`, `prod`) a través de `process.env.MODE` en workers.
- Se actualizó el middleware `attachUserFromToken` para manejar correctamente errores y evitar advertencias de SonarLint.
- Se verificó el uso correcto del logger desde `config/` y su aplicación con `addLogger` en `appServer.js`.

--- a/kube-backend.yaml
+++ b/kube-backend.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: backend
     spec:
+      automountServiceAccountToken: false
       containers:
         - name: backend-container
           image: sastrebocalonmaxi/backend3:1.0
@@ -24,7 +25,13 @@ spec:
               value: "3000"
             - name: SECRET_KEY
               value: CoderHouse2025
-
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
 ---
 
 apiVersion: v1
