--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/app.js",
 	"scripts": {
 		"start": "node src/app.js prod",
-		"dev": "nodemon src/app.js dev",
+		"dev": "node src/app.js dev",
 		"prod": "node src/app.js prod",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -38,6 +38,8 @@
 		"winston": "^3.17.0"
 	},
 	"devDependencies": {
+		"chai": "^5.2.0",
+		"mocha": "^11.3.0",
 		"nodemon": "^3.1.9"
 	}
 }
