--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"start": "node src/app.js prod",
+		"start": "nodemon src/app.js prod",
 		"dev": "node src/app.js dev",
 		"prod": "node src/app.js prod",
 		"test": "echo \"Error: no test specified\" && exit 1"
