CORRECION DE CAPAS- ORDERS.CONTROLLER-ORDER.SERVICE-PRODUCT.REPOSITORY-PRODUCT.MANAGER-AUTHPOLICY.MIDDLEWARE-HANDLEPOLICIES.MIDDLEWARE-USERS.ROUTER-SESSIONS.ROUTER-USER.SERVICE-CUSTOM.ROUTER
- En src\controllers\orders.controller.js: Se incorporó req.user.id en createOrder. Se agregó el método getUserOrders correctamente delegado al service.
- En src\services\order.service.js: Se delegó correctamente el acceso a productos a través de ProductRepository usando findByIdWithSession. Se implementó getOrdersByUser para búsquedas individuales.
- En src\repositories\product.repository.js: Se agregó el método findByIdWithSession delegando al manager.
- En src\dao\mongo\product.manager.js: Se implementó findByIdWithSession utilizando ProductModel con sesión de Mongoose.
- En src\middlewares\authPolicy.middleware.js: Se creó middleware para validar autenticación y rol directamente con passport + req.user.role.
- En src\middlewares\handlePolicies.middleware.js: Se actualizó comparación de roles para usar minúsculas, alineado con la nueva convención de roles.
- En src\repositories\user.repository.js: Se mantuvo consistencia en los métodos y convención de acceso delegado.
- En src\routes\orders.router.js: Se protegieron rutas con passportWithPolicy. Se agregó GET /my-orders solo para usuarios autenticados.
- En src\routes\sessions.router.js: Se adaptaron las políticas a minúscula ('public'). Se corrigió el orden de ejecución de middlewares para logout.
- En src\routes\users.router.js: Se ajustaron las políticas 'ADMIN' a 'admin'. Se mantiene consistencia con la estrategia actual.
- En src\services\user.service.js: Se incorporó el método assignCartToUser para mantener la separación correcta de capas desde el controller.
- En src\routes\custom.router.js: Se mantuvo estructura para uso de policies como segundo parámetro obligatorio.-

--- a/src/swagger/docs/users.yaml
+++ b/src/swagger/docs/users.yaml
@@ -22,41 +22,13 @@ paths:
                   cart: "682b9e814501d9f87aecb512"
                   role: "user"
                   __v: 0
-        "400":
-          description: Solicitud mal formada
-          content:
-            application/json:
-              example:
-                status: error
-                error: "Solicitud incorrecta"
-        "401":
-          description: No autorizado
-          content:
-            application/json:
-              example:
-                status: error
-                error: "No autorizado"
-        "403":
-          description: Prohibido - Sin permisos
-          content:
-            application/json:
-              example:
-                status: error
-                error: "No tenés permisos para acceder a este recurso"
-        "404":
-          description: Usuarios no encontrados
-          content:
-            application/json:
-              example:
-                status: error
-                error: "No se encontraron usuarios"
         "500":
           description: Error interno del servidor
           content:
             application/json:
               example:
                 status: error
-                error: "Error inesperado en el servidor"
+                error: "Ocurrió un error inesperado en el servidor"
 
   /api/users/{uid}:
     get:
@@ -93,6 +65,13 @@ paths:
               example:
                 status: error
                 error: "Usuario no encontrado"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              example:
+                status: error
+                error: "Ocurrió un error inesperado en el servidor"
 
     put:
       summary: Actualizar un usuario por su ID
@@ -106,19 +85,33 @@ paths:
             type: string
           description: ID del usuario a actualizar
       requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/requestBodies/UpdateUser'
+        $ref: '#/components/requestBodies/UpdateUser'
       responses:
         "200":
           description: Usuario actualizado exitosamente
           content:
             application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/User'
               example:
                 status: success
-                message: "Usuario actualizado correctamente"
+                message: Usuario actualizado correctamente
+                data:
+                  _id: "682b9e814501d9f87aecb514"
+                  first_name: "Mario"
+                  last_name: "García"
+                  email: "mario@example.com"
+                  age: 42
+                  cart: "682b9e814501d9f87aecb512"
+                  role: "user"
+                  __v: 0
         "400":
           description: Datos inválidos para la actualización
           content:
@@ -133,6 +126,20 @@ paths:
               example:
                 status: error
                 error: "Usuario no encontrado"
+        "401":
+          description: No autorizado
+          content:
+            application/json:
+              example:
+                status: error
+                error: "No autorizado: se requiere autenticación."
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              example:
+                status: error
+                error: "Error inesperado en el servidor"
 
     delete:
       summary: Eliminar un usuario por su ID
@@ -269,6 +276,9 @@ components:
               email:
                 type: string
                 description: Correo electrónico
+              age:
+                type: integer
+                description: Edad del usuario
               role:
                 type: string
                 description: Rol del usuario (user o admin)
@@ -280,4 +290,5 @@ components:
               first_name: Mario
               last_name: García
               email: mario@example.com
+              age: 42
               role: user
