--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "nodemon src/app.js prod",
 		"dev": "node src/app.js dev",
 		"prod": "node src/app.js prod",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha"
 	},
 	"keywords": [],
 	"author": "",
@@ -38,7 +38,7 @@
 	},
 	"devDependencies": {
 		"chai": "^5.2.0",
-		"mocha": "^11.3.0",
+		"mocha": "^11.4.0",
 		"nodemon": "^3.1.9"
 	}
 }
