--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"devDependencies": {
 		"chai": "^5.2.0",
 		"mocha": "^11.4.0",
-		"nodemon": "^3.1.9"
+		"nodemon": "^3.1.9",
+		"supertest": "^7.1.1"
 	}
 }
