--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "nodemon src/app.js prod",
 		"dev": "node src/app.js dev",
 		"prod": "node src/app.js prod",
-		"test": "mocha"
+		"test": "mocha test/"
 	},
 	"keywords": [],
 	"author": "",
