--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"type": "module",
 	"dependencies": {
 		"@faker-js/faker": "^9.7.0",
+		"@nestjs/mongoose": "^11.0.3",
 		"bcryptjs": "^3.0.2",
 		"cart-utils-maxi": "^1.0.0",
 		"commander": "^13.1.0",
@@ -23,7 +24,7 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.13.0",
+		"mongoose": "^8.15.1",
 		"mongoose-paginate-v2": "^1.9.0",
 		"multer": "^1.4.5-lts.2",
 		"nodemailer": "^7.0.2",
