--- a/kube-backend.yaml
+++ b/kube-backend.yaml
@@ -19,8 +19,8 @@ spec:
           ports:
             - containerPort: 3000
           env:
-            - name: MONGO_URL
-              value: mongodb://host.minikube.internal:27017/ecommerce
+            - name: MONGO_URI
+              value: mongodb://mongo:27017/ecommerce
             - name: PORT
               value: "3000"
             - name: SECRET_KEY
