--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - MONGO_URL=mongodb://mongo:27017/ecommerce
+      - MONGO_URI=mongodb://mongo:27017/ecommerce
     depends_on:
       - mongo
     command: ["node", "src/app.js"]
