--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "nodemon src/app.js prod",
 		"dev": "set NODE_ENV=dev && node src/app.js",
 		"prod": "node src/app.js prod",
-		"test": "mocha test/",
+		"test": "cross-env NODE_ENV=test mocha --timeout 10000",
 		"test:testdb": "cross-env NODE_ENV=test mocha test/"
 	},
 	"keywords": [],
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@faker-js/faker": "^9.7.0",
 		"@nestjs/mongoose": "^11.0.3",
+		"bcrypt": "^6.0.0",
 		"bcryptjs": "^3.0.2",
 		"cart-utils-maxi": "^1.0.0",
 		"commander": "^13.1.0",
