reestructuracion de carpetas para test
-Se reetructura la ubicacion de los archivos de testeo para que esten ordenadas en subcarpetas dentro de /test.-

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"start": "nodemon src/app.js prod",
-		"dev": "set NODE_ENV=dev && node src/app.js",
-		"prod": "node src/app.js prod",
-		"test": "cross-env NODE_ENV=test mocha --timeout 10000",
-		"test:testdb": "cross-env NODE_ENV=test mocha test/"
+  		"start": "nodemon src/app.js prod",
+  		"dev": "set NODE_ENV=dev && node src/app.js",
+  		"prod": "node src/app.js prod",
+  		"test": "cross-env NODE_ENV=test mocha --timeout 10000",
+  		"test:testdb": "cross-env NODE_ENV=test mocha test/",
+  		"test:carts": "cross-env NODE_ENV=test mocha test/carts/carts.test.js --timeout 5000",
+  		"test:users": "cross-env NODE_ENV=test mocha test/users/*.test.js --timeout 5000"
 	},
 	"keywords": [],
 	"author": "",
