CARTS.YAML-ORDERS.YAML-TICKETS.YAML
- En carts.yaml: Se agregó  los components.schemas.Cart y requestBodies.UpdateCartProducts para estandarizar la estructura de la documentación.
- En orders.yaml: Se agregó components.schemas.Order y requestBodies.CreateOrder para documentar correctamente el body esperado y la estructura de las órdenes.
- En tickets.yaml: Se agregó components.schemas.Ticket para documentar la estructura de los tickets generados por la compra.-

--- a/src/swagger/docs/tickets.yaml
+++ b/src/swagger/docs/tickets.yaml
@@ -73,3 +73,25 @@ paths:
           description: Ticket no encontrado
         '500':
           description: Error interno del servidor
+
+components:
+  schemas:
+    Ticket:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: ID del ticket
+        code:
+          type: string
+          description: Código del ticket generado
+        amount:
+          type: number
+          description: Monto total del ticket
+        purchase_datetime:
+          type: string
+          format: date-time
+          description: Fecha y hora de la compra
+        purchaser:
+          type: string
+          description: Email del comprador
