--- a/src/swagger/docs/carts.yaml
+++ b/src/swagger/docs/carts.yaml
@@ -230,3 +230,57 @@ paths:
                 status: success
                 message: Compra realizada
                 data: { /* ejemplo de ticket */ }
+
+components:
+  schemas:
+    Cart:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: ID del carrito
+        products:
+          type: array
+          description: Productos en el carrito
+          items:
+            type: object
+            properties:
+              productId:
+                type: string
+                description: ID del producto
+              quantity:
+                type: integer
+                description: Cantidad del producto
+        user:
+          type: string
+          description: ID del usuario dueño del carrito
+
+  requestBodies:
+    UpdateCartProducts:
+      description: Datos para reemplazar los productos de un carrito
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              products:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    productId:
+                      type: string
+                      description: ID del producto
+                    quantity:
+                      type: integer
+                      description: Cantidad del producto
+            required:
+              - products
+            example:
+              products:
+                - productId: "ABC123"
+                  quantity: 2
+                - productId: "DEF456"
+                  quantity: 1
+
