--- a/src/swagger/docs/orders.yaml
+++ b/src/swagger/docs/orders.yaml
@@ -102,3 +102,54 @@ paths:
               example:
                 status: error
                 error: "No autorizado: se requiere autenticación."
+
+components:
+  schemas:
+    Order:
+      type: object
+      properties:
+        _id:
+          type: string
+          description: ID de la orden
+        user:
+          type: string
+          description: Email del usuario que realizó la orden
+        amount:
+          type: number
+          description: Monto total de la orden
+        products:
+          type: array
+          description: Productos comprados
+          items:
+            type: object
+            properties:
+              productId:
+                type: string
+                description: ID del producto
+              quantity:
+                type: integer
+                description: Cantidad comprada
+        purchase_datetime:
+          type: string
+          format: date-time
+          description: Fecha y hora de la compra
+        code:
+          type: string
+          description: Código de la orden
+
+  requestBodies:
+    CreateOrder:
+      description: Datos necesarios para crear una orden
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              cartId:
+                type: string
+                description: ID del carrito desde el cual se genera la orden
+            required:
+              - cartId
+            example:
+              cartId: "CART12345"
