APP.JS - APP-EXPRESS.JS - APP-SERVER.JS - CONFIG.JS - DB.JS - DEV-LOGGER.JS - LOGGER.ENVIRONMENT.JS - PASSPORT.CONFIG.JS - USER.MANAGER.JS - ADD-LOGGER.MIDDLEWARE.JS - HANDLE-POLICIES.MIDDLEWARE.JS - CARTS.ROUTER.JS - CUSTOM.ROUTER.JS - CART.SERVICE.JS - GENERATE-USER.JS - HASH.JS - TWILIO.JS - CARTS.API.TEST.JS - PRODUCTS.API.TEST.JS - SESSIONS.API.TEST.JS - TICKETS.API.TEST.JS - CART.SERVICE.TEST.JS - HASH.TEST.JS - USER.DTO.TEST.JS - SETUPTESTDATA.JS - TESTDATA.JS
- En src\appExpress.js: se creó archivo para inicializar Express con toda la configuración, middlewares, rutas y Swagger, separado del appServer.js.
- En src\appServer.js: se refactorizó para importar app desde appExpress.js y enfocarse únicamente en arrancar el servidor y conectar a DB. Se agregó manejo de NODE_ENV='test' para no levantar el server en tests.
- En src\config\config.js: se refactorizó la selección del archivo .env según NODE_ENV (dev, test, prod), se agregó la propiedad 'mode' en el export de config, y se ajustó la selección de MONGO_URI.
- En src\config\db.js: se ajustó manejo de logger al conectar a DB, usando logger.error en vez de logger.fatal.
- En src\config\devLogger.js: se agregó transporte de tipo 'File' para guardar logs de nivel 'warn' en errors.log.
- En src\config\logger.environment.js: se reemplazó lógica anterior y se unificó con winston.createLogger completo, con transporte console y file.
- En src\config\passport.config.js: se comentaron las líneas de la estrategia de GitHub para evitar interferencias en tests. Se agregó console.log para depurar password en login.
- En src\dao\mongo\user.manager.js: se agregó console.log de debug en método getByEmail para trazabilidad.
- En src\middlewares\addLogger.middleware.js: se refactorizó para exponer en req.logger funciones individuales (info, error, warn, debug, http).
- En src\middlewares\handlePolicies.middleware.js: se ajustó a comparar el role en lowerCase para evitar inconsistencias por case sensitivity.
- En src\routes\car

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"start": "nodemon src/app.js prod",
-		"dev": "set NODE_ENV=dev && node src/app.js",
-		"prod": "node src/app.js prod",
-		"test": "cross-env NODE_ENV=test mocha test/**/*.test.js --timeout 10000",
-		"test:api": "cross-env NODE_ENV=test mocha test/api/**/*.test.js --timeout 5000",
+		"start": "node src/app.js prod",
+		"dev": "cross-env NODE_ENV=dev node src/app.js",
+		"prod": "cross-env NODE_ENV=prod node src/app.js",
+		"test": "cross-env NODE_ENV=test mocha \"test/**/*.test.js\" --timeout 10000",
 		"test:unit": "cross-env NODE_ENV=test mocha test/unit/**/*.test.js --timeout 5000",
-		"test:carts": "cross-env NODE_ENV=test mocha test/api/carts.api.test.js --timeout 5000",
-		"test:tickets": "cross-env NODE_ENV=test mocha test/api/tickets.api.test.js --timeout 5000"
+		"test:api": "cross-env NODE_ENV=test mocha \"test/api/**/*.test.js\" --timeout 5000"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,13 +19,13 @@
 		"@faker-js/faker": "^9.7.0",
 		"@nestjs/mongoose": "^11.0.3",
 		"bcrypt": "^6.0.0",
-		"bcryptjs": "^3.0.2",
 		"cart-utils-maxi": "^1.0.0",
 		"commander": "^13.1.0",
 		"compression": "^1.8.0",
 		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.7",
-		"express": "^4.21.2",
+		"express": "^4.18.2",
+		"express-session": "^1.18.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.15.1",
 		"mongoose-paginate-v2": "^1.9.0",
@@ -40,7 +38,7 @@
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.1",
 		"twilio": "^5.6.0",
-		"winston": "^3.17.0"
+		"winston": "^3.8.2"
 	},
 	"devDependencies": {
 		"chai": "^5.2.0",
