ephemeral-storage: "2Gi"
- En kube-backend.yaml: Se añadió la configuración de ephemeral-storage en resources.requests y resources.limits del container backend-container para cumplir con las recomendaciones de SonarQube.-

--- a/kube-backend.yaml
+++ b/kube-backend.yaml
@@ -29,9 +29,11 @@ spec:
             requests:
               memory: "128Mi"
               cpu: "100m"
+              ephemeral-storage: "1Gi"
             limits:
               memory: "256Mi"
               cpu: "200m"
+              ephemeral-storage: "2Gi"
 ---
 
 apiVersion: v1
