--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     build: .
     container_name: backend-iii
     ports:
-      - "8080:8080"
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/ecommerce
+      - "8080:8080"    
     depends_on:
       - mongo
+    env_file:
+      - .env.prod
     command: ["node", "src/app.js"]
+    restart: always
 
   mongo:
     image: mongo:6.0
@@ -19,6 +20,7 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    restart: always
 
 volumes:
   mongo_data:
