--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.9'
-
 services:
   backend:
-    build: .
+    image: sastrebocalonmaxi/backend3:1.2
     container_name: backend-iii
     ports:
-      - "8080:8080"    
+      - "3000:3000"    
     depends_on:
       - mongo
     env_file:
